@@ -6,7 +6,20 @@ import antlr
 import error
 from expression import nodes
 from expression import rewrite
-import query
+
+
+class Var(nodes.ExpressionNode):
+    """An expression node representing a SerQL variable by name."""
+
+    __slots = ('name')
+
+    def __init__(self, name):
+        super(Var, self).__init__()
+
+        self.name = name
+
+    def prettyPrintAttributes(self, stream, indentLevel):
+        stream.write(' %s' % self.name)
 
 
 class SelectContext(object):
@@ -86,13 +99,13 @@ class SelectContext(object):
 
     def expandVariables(self, expr):
         def operation(expr, subexprsModif, *subexprs):
-            assert isinstance(expr, query.Var)
+            assert isinstance(expr, Var)
             assert subexprsModif == False
 
             # Select an arbitrary binding.
             return iter(self.bindings[expr.name]).next(), True
 
-        return rewrite.treeMatchApply(query.Var, operation, expr)[0]
+        return rewrite.treeMatchApply(Var, operation, expr)[0]
 
     def prettyPrint(self, stream=None, indent=0):
         if stream == None:
@@ -109,25 +122,46 @@ class SelectContext(object):
 class Parser(antlr.LLkParser):
     """The base class for the SerQL parser generated by ANTLR."""
 
+    __slots__ = ('prefixes')
+
     def __init__(self, *args, **kwargs):
         super(Parser, self).__init__(*args, **kwargs)
 
-        try:
-            self.query = kwargs['query']
-        except KeyError:
-            self.query = query.Query()
+        self.prefixes = {}
 
         # Set the standard SerQL predefined prefixes.
-        self.query.setPrefix('rdf',
-                             'http://www.w3.org/1999/02/22-rdf-syntax-ns#')
-        self.query.setPrefix('rdfs',
-                             'http://www.w3.org/2000/01/rdf-schema#')
-        self.query.setPrefix('xsd',
-                             'http://www.w3.org/2001/XMLSchema#')
-        self.query.setPrefix('owl',
-                             'http://www.w3.org/2002/07/owl#')
-        self.query.setPrefix('serql',
-                             'http://www.openrdf.org/schema/serql#')
+        self.setPrefix('rdf',
+                       'http://www.w3.org/1999/02/22-rdf-syntax-ns#')
+        self.setPrefix('rdfs',
+                       'http://www.w3.org/2000/01/rdf-schema#')
+        self.setPrefix('xsd',
+                       'http://www.w3.org/2001/XMLSchema#')
+        self.setPrefix('owl',
+                       'http://www.w3.org/2002/07/owl#')
+        self.setPrefix('serql',
+                       'http://www.openrdf.org/schema/serql#')
+
+    def setPrefix(self, prefix, uri):
+        self.prefixes[prefix] = uri
+
+    def getPrefixUri(self, prefix):
+        return self.prefixes[prefix]
+        # FIXME: Produce appropriate exception.
+
+    def getPrefixes(self):
+        return self.prefixes
+
+    def resolveQName(self, qName):
+        pos = qName.index(':')
+        base = self.getPrefixUri(qName[:pos])
+        return base + qName[pos + 1:]
+
+    def __repr__(self):
+        s = StringIO.StringIO()
+
+        # FIXME: Put something here.
+
+        return s.getvalue()
 
     @staticmethod
     def exprFromTriple(context, subject, pred, object):
@@ -135,7 +169,7 @@ class Parser(antlr.LLkParser):
 
         conds = []
         for i, node in enumerate((subject, pred, object)):
-            if isinstance(node, query.Var):
+            if isinstance(node, Var):
                 context.addBinding(node.name, 'S', incarnation, i)
             else:
                 ref = nodes.FieldRef('S', incarnation, i)
@@ -159,13 +193,13 @@ class Parser(antlr.LLkParser):
                 rels.append(Parser.exprFromTriple(context, node1,
                                                   edge, node2))
 
-                if isinstance(node1, query.Var):
+                if isinstance(node1, Var):
                     if indepVar1:
                         context.addIndependentPair(indepVar1, node1)
                     else:
                         indepVar1 = node1
 
-                if isinstance(node2, query.Var):
+                if isinstance(node2, Var):
                     if indepVar2:
                         context.addIndependentPair(indepVar2, node2)
                     else:
